infra/k8s/manager-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manager-api
  labels:
    app: manager-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: manager-api
  template:
    metadata:
      labels:
        app: manager-api
    spec:
      containers:
        - name: manager-api
          image: manager-api:0.1.0
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: manager-api-service
spec:
  selector:
    app: manager-api
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
