infra/k8s/manager-front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manager-front
  labels:
    app: manager-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: manager-front
  template:
    metadata:
      labels:
        app: manager-front
    spec:
      containers:
        - name: manager-front
          image: manager-front:0.1.1
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: manager-front-service
spec:
  selector:
    app: manager-front
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
