infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cyber-platform-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http

spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - centralmanager.wiga.fr
      secretName: centralmanager-tls

  rules:
    - host: centralmanager.wiga.fr
      http:
        paths:

          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: manager-api-service
                port:
                  number: 5000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: manager-front-service
                port:
                  number: 3000
